--- a/magnet/templates/base.html
+++ b/magnet/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Mata garuda network</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}" />
+    <link rel="stylesheet" href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}" />
   </head>
   <body>
     <div class="container">
@@ -14,5 +15,8 @@
       {% endblock %}
     </div>
   </body>
-  <script src="{% static 'js/main.js' %}"></script>
+  <script src="{% static 'jquery/dist/jquery.min.js' %}" > </script>
+  <script src="{% static 'tether/dist/js/tether.min.js' %}" ></script>
+  <script src="{% static 'bootstrap/dist/js/bootstrap.min.js' %}" ></script>
+  <script src="{% static 'js/main.js' %}"> </script>
 </html>
