Basic user mode

--- a/magnet/templates/index.html
+++ b/magnet/templates/index.html
@@ -1,6 +1,19 @@
 {% extends 'base.html' %}
 
-
 {% block main_content %}
-main content
+
+<div class="row center login-boxes">
+  <div class="col">
+    Volunteer?
+    Klik <a href="#">disini</a>
+  </div>
+
+  <div class="col">
+    Inisator?
+    Klik <a href="#">disini</a>
+  </div>
+</div>
+
+
+
 {% endblock %}
