Basic form for registration

--- a/magnet/templates/index.html
+++ b/magnet/templates/index.html
@@ -5,7 +5,7 @@
 <div class="row center login-boxes">
   <div class="col">
     Volunteer?
-    Klik <a href="#">disini</a>
+    Klik <a href="{% url 'register' %}">disini</a>
   </div>
 
   <div class="col">
