--- a/magnet/templates/base.html
+++ b/magnet/templates/base.html
@@ -10,6 +10,15 @@
   </head>
   <body>
     <div class="container">
+        <div class="row justify-content-end">
+            <div class="col-4">
+                {% if user.is_authenticated %}
+                    Hi, {{ user.first_name}}. <a href="{% url 'logout' %}"> Logout </a>
+                {% endif %}
+            </div>
+        </div>
+
+        
         {% for message in messages %}
         <div class="row">
             <div class="col alert alert-success" role="alert">
